--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+      <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://getlisted.site/" />
+  <meta property="twitter:title" content="Home Page" />
+  <meta property="twitter:description" content="GetListed connects investors with promising African startups across all sectors and stages" />
+  <meta property="twitter:image" content="https://getlisted.site/assets/dashboard-BrMaO4UC.png" />
     <title>GetListed | Create Your Profile, Get Discovered and Make Connections</title>
   </head>
   <body>
